Fix to helperNumberLayer
Added an explicit set to the height to keep the circle round in all
instances, and a set to lthe ine-height to keep the number centered.
Without this, my helperNumberLayer height was being set automatically
to only 15px, which made it vertically squished.

--- a/introjs.css
+++ b/introjs.css
@@ -44,6 +44,8 @@
   font-weight: bold;
   text-align: center;
   width: 20px;
+  height:20px;
+  line-height: 20px;
   border: 3px solid white;
   box-shadow: 0px 2px 5px rgba(0,0,0,0.4);
   text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
